fixed input z-index

--- a/views/addproduct.ejs
+++ b/views/addproduct.ejs
@@ -84,10 +84,10 @@
             <div class="col-lg-9">
 
                 <div class="card mt-4">
-                    <div class="card-block">
+                    <div class="card-block inner">
                         <form method="post" action="/input_new_product" enctype="multipart/form-data">
                         <!-- with JM Css -->
-                        <input type="text" name="name" id="name" required="required" class="form" placeholder="Name your product" />
+                        <input type="text" name="name" id="name" required="required" class="form" style="z-index: 0" placeholder="Name your product" />
                         
                         <input type="text" name="category" id="category" required="required" class="form" placeholder="Category" />
                         <input type="number" name="price" id="price" required="required" class="form" placeholder="Select your price" />
